--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:context=".ui.main.MainActivity">
 
@@ -10,14 +11,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        android:elevation="8dp">
+        android:elevation="8dp"
+        app:cardBackgroundColor="@color/grey"
+        app:cardCornerRadius="20dp">
         <androidx.appcompat.widget.SearchView
             android:id="@+id/search_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="16dp"/>
+            android:layout_margin="16dp"
+            android:outlineSpotShadowColor="@color/black"/>
     </androidx.cardview.widget.CardView>
-
 
     <include
         android:id="@+id/include_main_search"
